--- a/srcs/nginx/DockerfileNginx
+++ b/srcs/nginx/DockerfileNginx
@@ -4,4 +4,7 @@ RUN apt-get update -y && \
     apt-get upgrade -y && \
     apt-get install nginx -y
 
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT [ "nginx" ]
+CMD ["-g", "daemon off;"]
+
+# CMD ["nginx", "-g", "daemon off;"]
