--- a/srcs/requirements/nginx/DockerfileNginx
+++ b/srcs/requirements/nginx/DockerfileNginx
@@ -2,10 +2,10 @@ FROM debian:buster
 
 ARG FILES_SITE_PATH
 
-RUN apt-get update -y ;\
+RUN apt-get update -y &&\
     apt-get upgrade -y && \
-    apt-get install nginx -y
-    # apt-get install openssl -y
+    apt-get install nginx -y && \
+    apt-get install openssl -y
 
 RUN mkdir -p ${FILES_SITE_PATH}
 
@@ -14,8 +14,8 @@ COPY ./conf/nginx.conf /etc/nginx/
 
 RUN ln -s /etc/nginx/sites-available/Inception /etc/nginx/sites-enabled/Inception
 
-# RUN mkdir -p /ssl_conf && \
-    # openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj "/C=FR/ST=Rhone/L=Lyon/O=42/CN=lpuchol.42.fr/emailAddress=lpuchol@student.42lyon.fr" -keyout /ssl_conf/lpuchol.42.fr.key -out /ssl_conf/lpuchol.42.fr.crt
+RUN mkdir -p /ssl_conf && \
+    openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj "/C=FR/ST=Rhone/L=Lyon/O=42/CN=lpuchol.42.fr/emailAddress=lpuchol@student.42lyon.fr" -keyout /ssl_conf/lpuchol.42.fr.key -out /ssl_conf/lpuchol.42.fr.crt
 
 ENTRYPOINT [ "nginx" ]
 CMD ["-g", "daemon off;"]
