container wp se lance

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,14 @@
-# changer le path des volumes pour debian
+### changer le path des volumes pour debian
+    # host
 VOLUME_PATH_WP=/Users/lorispuchol/data/wp_vol
 VOLUME_PATH_MARIADB=/Users/lorispuchol/data/mariadb_vol
 
+    # container
 FILES_SITE_PATH=/var/www/Inception
+MARIADB_PATH=/var/lib/mysql
+
+### Mariadb
+DB_NAME=wp_inception
+DB_USER=adm_inception
+DB_PASS=inception
+DB_ROOT_PASS=inception
