--- a/srcs/.env
+++ b/srcs/.env
@@ -12,3 +12,16 @@ DB_NAME=wp_inception
 DB_USER=adm_inception
 DB_PASS=inception
 DB_ROOT_PASS=inception
+DB_HOST=mariadb_ctn
+
+### DB_wordpress
+WP_DOMAIN=lpuchol.42.fr
+WP_TITLE=Inception
+
+WP_ADMIN=loris
+ADMIN_PASSW=inception
+ADMIN_MAIL=rien@rien.fr
+
+WP_USER=kiki
+USER_PASSW=inception
+USER_MAIL=rien@rien.fr
