--- a/srcs/requirements/wordpress/DockerfileWordpress
+++ b/srcs/requirements/wordpress/DockerfileWordpress
@@ -50,7 +50,8 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
     chmod +x wp-cli.phar && \
     mv wp-cli.phar /usr/local/bin/wp
 
-# RUN wp --allow-root --path="${FILES_SITE_PATH}/" core install --url=${WP_DOMAIN} --title=${WP_TITLE} --admin_user=${WP_ADMIN} --admin_password=${ADMIN_PASSW} --admin_email=${ADMIN_MAIL} && \
-    # wp --allow-root --path="${FILES_SITE_PATH}/" user create ${WP_USER} ${USER_MAIL} --user_pass=${USER_PASSW} --porcelain
+RUN mkdir /tools/
 
-CMD ["php-fpm7.3", "-R", "-F"]
+COPY ./tools/script.sh /tools/
+
+CMD ["sh", "/tools/script.sh"]
