--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,4 @@
-### changer le path des volumes pour debian
+### Volumes: changer le path des volumes pour debian
     # host
 VOLUME_PATH_WP=/home/loris/data/wp_vol
 VOLUME_PATH_MARIADB=/home/loris/data/mariadb_vol
